--- a/Lab/sts/STS_Project.ipynb
+++ b/Lab/sts/STS_Project.ipynb
@@ -12,6 +12,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## Preprocessing\n",
     "# TODO = [] \n",
@@ -290,38 +297,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentA = X_train.SentA.values\n",
+    "sentB = X_train.SentB.values\n",
+    "all_sents = sentA + sentB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importance = get_word_importance(all_sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf = get_tfidf(all_sents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1)-->Score syn-syn2\n",
-      "Synset('bicycle.n.01') Synset('motorcycle.n.01') 0.7272727272727273\n",
-      "(2)-->Score syn2-syn\n",
-      "Synset('motorcycle.n.01') Synset('bicycle.n.01') 0.7272727272727273\n",
-      "(1)-->Score syn-syn2\n",
-      "Synset('bicycle.n.01') Synset('bicycle.n.01') 1.0\n",
-      "(2)-->Score syn2-syn\n",
-      "Synset('bicycle.n.01') Synset('bicycle.n.01') 1.0\n",
-      "(2)-->Score syn2-syn\n",
-      "Synset('bicycle.v.01') Synset('bicycle.n.01') 0.13333333333333333\n",
-      "(1)-->Score syn-syn2\n",
-      "Synset('bicycle.v.01') Synset('motorcycle.n.01') 0.11764705882352941\n",
-      "(1)-->Score syn-syn2\n",
-      "Synset('bicycle.v.01') Synset('bicycle.n.01') 0.13333333333333333\n",
-      "(1)-->Score syn-syn2\n",
-      "Synset('bicycle.v.01') Synset('bicycle.v.01') 1.0\n",
-      "(2)-->Score syn2-syn\n",
-      "Synset('bicycle.v.01') Synset('bicycle.v.01') 1.0\n"
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'lower'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-173-f04dcdeccd81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# We only use the TF-IDF to look at the synset similarity measure of the two senses (sense1 and sense2)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTfidfVectorizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mresp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_sents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_feature_names\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/feature_extraction/text.py\u001b[0m in \u001b[0;36mfit_transform\u001b[0;34m(self, raw_documents, y)\u001b[0m\n\u001b[1;32m   1839\u001b[0m         \"\"\"\n\u001b[1;32m   1840\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1841\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_documents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1842\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_tfidf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1843\u001b[0m         \u001b[0;31m# X is already a transformed view of raw_documents so\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/feature_extraction/text.py\u001b[0m in \u001b[0;36mfit_transform\u001b[0;34m(self, raw_documents, y)\u001b[0m\n\u001b[1;32m   1196\u001b[0m         \u001b[0mmax_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1197\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1198\u001b[0;31m         vocabulary, X = self._count_vocab(raw_documents,\n\u001b[0m\u001b[1;32m   1199\u001b[0m                                           self.fixed_vocabulary_)\n\u001b[1;32m   1200\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/feature_extraction/text.py\u001b[0m in \u001b[0;36m_count_vocab\u001b[0;34m(self, raw_documents, fixed_vocab)\u001b[0m\n\u001b[1;32m   1108\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mraw_documents\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1109\u001b[0m             \u001b[0mfeature_counter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1110\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0mfeature\u001b[0m \u001b[0;32min\u001b[0m \u001b[0manalyze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1111\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1112\u001b[0m                     \u001b[0mfeature_idx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvocabulary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/feature_extraction/text.py\u001b[0m in \u001b[0;36m_analyze\u001b[0;34m(doc, analyzer, tokenizer, ngrams, preprocessor, decoder, stop_words)\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpreprocessor\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 104\u001b[0;31m             \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocessor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    105\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtokenizer\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m             \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/feature_extraction/text.py\u001b[0m in \u001b[0;36m_preprocess\u001b[0;34m(doc, accent_function, lower)\u001b[0m\n\u001b[1;32m     67\u001b[0m     \"\"\"\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlower\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m         \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdoc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0maccent_function\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0mdoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maccent_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'lower'"
      ]
     }
    ],
@@ -337,46 +372,121 @@
     "\n",
     "# We only use the TF-IDF to look at the synset similarity measure of the two senses (sense1 and sense2)\n",
     "vec = TfidfVectorizer()\n",
-    "resp = vec.fit_transform([sample_sentence, sample_sentence2])\n",
+    "resp = vec.fit_transform()\n",
     "feature_names = vec.get_feature_names()\n",
-    "\n",
     "dense_list = resp.todense().tolist()\n",
-    "\n",
-    "# the sentences we used\n",
-    "indices = ['SentA','SentB']\n",
     "# final df with the TFIDF\n",
     "df = pd.DataFrame(dense_list, columns=feature_names).T\n",
     "\n",
     "\n",
-    "df['delta'] = df[0] - df[1]\n",
+    "#df['delta'] = df[0] - df[1]\n",
     "\n",
     "\n",
     "#df.head()\n",
-    "kk = min(df.delta)\n",
-    "ki = max(df.delta)\n",
+    "#kk = min(df.delta)\n",
+    "#ki = max(df.delta)\n",
     "\n",
-    "abs(kk) == abs(ki)\n",
+    "#abs(kk) == abs(ki)\n",
     "\n",
-    "from nltk.corpus import wordnet\n",
-    "word1 = df[df['delta']>0].index[0]\n",
-    "word2 = df[df['delta']<0].index[0]\n",
+    "#from nltk.corpus import wordnet\n",
+    "#word1 = df[df['delta']>0].index[0]\n",
+    "#word2 = df[df['delta']<0].index[0]\n",
     "\n",
     "#synset sim \n",
-    "syn1 = wordnet.synsets(word1)\n",
-    "syn2 = wordnet.synsets(word2)\n",
-    "\n",
-    "for syns in syn1:\n",
-    "    for syns2 in syn2:\n",
-    "        #print(syns, syns2)\n",
-    "        score = syns.wup_similarity(syns2)\n",
-    "        score2 = syns2.wup_similarity(syns)\n",
-    "        if (score != 0) and score is not None:\n",
-    "            print(\"(1)-->Score syn-syn2\")\n",
-    "            print(syns, syns2, score)\n",
-    "        if (score2 != 0) and score2 is not None:\n",
-    "            print(\"(2)-->Score syn2-syn\")\n",
-    "            print(syns2, syns, score2)\n",
+    "#syn1 = wordnet.synsets(word1)\n",
+    "#syn2 = wordnet.synsets(word2)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bicycle</th>\n",
+       "      <td>0.630099</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.630099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bike</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.630099</td>\n",
+       "      <td>-0.630099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is</th>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>man</th>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>riding</th>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                0         1     delta\n",
+       "bicycle  0.630099  0.000000  0.630099\n",
+       "bike     0.000000  0.630099 -0.630099\n",
+       "is       0.448321  0.448321  0.000000\n",
+       "man      0.448321  0.448321  0.000000\n",
+       "riding   0.448321  0.448321  0.000000"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -405,10 +515,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.n.01') Synset('motorcycle.n.01') 0.7272727272727273\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('motorcycle.n.01') Synset('bicycle.n.01') 0.7272727272727273\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.n.01') Synset('bicycle.n.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.n.01') Synset('bicycle.n.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.v.01') Synset('bicycle.n.01') 0.13333333333333333\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('motorcycle.n.01') 0.11764705882352941\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('bicycle.n.01') 0.13333333333333333\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('bicycle.v.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.v.01') Synset('bicycle.v.01') 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for syns in syn1:\n",
+    "    for syns2 in syn2:\n",
+    "        #print(syns, syns2)\n",
+    "        score = syns.wup_similarity(syns2)\n",
+    "        score2 = syns2.wup_similarity(syns)\n",
+    "        if (score != 0) and score is not None:\n",
+    "            print(\"(1)-->Score syn-syn2\")\n",
+    "            print(syns, syns2, score)\n",
+    "        if (score2 != 0) and score2 is not None:\n",
+    "            print(\"(2)-->Score syn2-syn\")\n",
+    "            print(syns2, syns, score2)"
+   ]
   },
   {
    "cell_type": "code",
