added model with GSCV

--- a/Lab/Notebooks/LAB5_IHLT_Session_5_Andrey_Eric.ipynb
+++ b/Lab/Notebooks/LAB5_IHLT_Session_5_Andrey_Eric.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 1,
       "metadata": {
         "id": "xg-33eLy8LgE"
       },
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,12 +39,12 @@
       },
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data] Downloading package wordnet to /Users/Eric/nltk_data...\n",
             "[nltk_data]   Package wordnet is already up-to-date!\n",
-            "[nltk_data] Downloading package wordnet_ic to /root/nltk_data...\n",
+            "[nltk_data] Downloading package wordnet_ic to /Users/Eric/nltk_data...\n",
             "[nltk_data]   Package wordnet_ic is already up-to-date!\n"
           ]
         },
@@ -54,7 +54,7 @@
               "True"
             ]
           },
-          "execution_count": 55,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 3,
       "metadata": {
         "id": "5DP5hhUVIeEY"
       },
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 4,
       "metadata": {
         "id": "W64p5lggLubG"
       },
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "id": "1O0pxoPFegt6"
       },
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 6,
       "metadata": {
         "id": "GLOLO7GqbC3y"
       },
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 7,
       "metadata": {
         "id": "FDB_ENTaI8K8"
       },
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 8,
       "metadata": {
         "id": "0ALrj3apgtny"
       },
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 9,
       "metadata": {
         "id": "FjjDZ2hGf536"
       },
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 10,
       "metadata": {
         "id": "0IOaOlKSjeem"
       },
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 11,
       "metadata": {
         "id": "P942fvFRKheO"
       },
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 12,
       "metadata": {
         "id": "Tj5BqiIxUyJp"
       },
@@ -323,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 13,
       "metadata": {
         "id": "CypPUOOpUB5o"
       },
@@ -335,7 +335,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'man': [Synset('man.n.01'),\n",
+              "  Synset('serviceman.n.01'),\n",
+              "  Synset('man.n.03'),\n",
+              "  Synset('homo.n.02'),\n",
+              "  Synset('man.n.05'),\n",
+              "  Synset('man.n.06'),\n",
+              "  Synset('valet.n.01'),\n",
+              "  Synset('man.n.08'),\n",
+              "  Synset('man.n.09'),\n",
+              "  Synset('man.n.10'),\n",
+              "  Synset('world.n.08')],\n",
+              " 'swim': [Synset('swim.v.01'),\n",
+              "  Synset('float.v.02'),\n",
+              "  Synset('swim.v.03'),\n",
+              "  Synset('swim.v.04'),\n",
+              "  Synset('swim.v.05')],\n",
+              " 'girl': [Synset('girl.n.01'),\n",
+              "  Synset('female_child.n.01'),\n",
+              "  Synset('daughter.n.01'),\n",
+              "  Synset('girlfriend.n.02'),\n",
+              "  Synset('girl.n.05')],\n",
+              " 'boy': [Synset('male_child.n.01'),\n",
+              "  Synset('boy.n.02'),\n",
+              "  Synset('son.n.01'),\n",
+              "  Synset('boy.n.04')],\n",
+              " 'woman': [Synset('woman.n.01'),\n",
+              "  Synset('woman.n.02'),\n",
+              "  Synset('charwoman.n.01'),\n",
+              "  Synset('womanhood.n.02')],\n",
+              " 'walk': [Synset('walk.v.01'),\n",
+              "  Synset('walk.v.02'),\n",
+              "  Synset('walk.v.03'),\n",
+              "  Synset('walk.v.04'),\n",
+              "  Synset('walk.v.05'),\n",
+              "  Synset('walk.v.06'),\n",
+              "  Synset('walk.v.07'),\n",
+              "  Synset('walk.v.08'),\n",
+              "  Synset('walk.v.09'),\n",
+              "  Synset('walk.v.10')]}"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "d"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
         "id": "BuVl1TfCi7WW"
       },
@@ -346,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -359,62 +417,188 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+            "<ipython-input-10-c24a6d9314ec>:12: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  if sys.path[0] == '':\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+            "  df2_mask['SynsetA'] = df2_mask.Combination.apply(lambda x: x.split('-')[0])\n",
+            "<ipython-input-10-c24a6d9314ec>:13: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  del sys.path[0]\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+            "  df2_mask['SynsetB'] = df2_mask.Combination.apply(lambda x: x.split('-')[1])\n",
+            "<ipython-input-10-c24a6d9314ec>:14: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:15: SettingWithCopyWarning: \n",
+            "  df2_mask['WordA'] = df2_mask.Combination.apply(lambda x: x.split('-')[0])\n",
+            "<ipython-input-10-c24a6d9314ec>:15: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  from ipykernel import kernelapp as app\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
+            "  df2_mask['WordA'] = df2_mask.Combination.apply(lambda x: x.split('.')[0])\n",
+            "<ipython-input-10-c24a6d9314ec>:16: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  app.launch_new_instance()\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+            "  df2_mask['WordB'] = df2_mask.Combination.apply(lambda x: x.split('-')[1])\n",
+            "<ipython-input-10-c24a6d9314ec>:17: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:19: SettingWithCopyWarning: \n",
+            "  df2_mask['WordB'] = df2_mask.Combination.apply(lambda x: x.split('.')[0])\n",
+            "<ipython-input-10-c24a6d9314ec>:19: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
+            "  df2_mask['SynsetA'] = df2_mask['SynsetA'].apply(lambda x: wn.synset(x))\n",
+            "<ipython-input-10-c24a6d9314ec>:20: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:39: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:40: SettingWithCopyWarning: \n",
+            "  df2_mask['SynsetB'] = df2_mask['SynsetB'].apply(lambda x: wn.synset(x))\n",
+            "<ipython-input-10-c24a6d9314ec>:39: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "  df_final = dfinal[~mask]\n",
+            "<ipython-input-10-c24a6d9314ec>:40: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_final['LCS'] = df_final['LCS'].apply(lambda x: x[0].name())\n"
           ]
         }
       ],
       "source": [
         "final_df = final_df(result2,values_list_tuples)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Combination</th>\n",
+              "      <th>LCS</th>\n",
+              "      <th>WordA</th>\n",
+              "      <th>WordB</th>\n",
+              "      <th>PATH_SIMIL</th>\n",
+              "      <th>LCH_SIMIL</th>\n",
+              "      <th>WUP_SIMIL</th>\n",
+              "      <th>LIN_SIMIL</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>man.n.01-serviceman.n.01</td>\n",
+              "      <td>person.n.01</td>\n",
+              "      <td>man</td>\n",
+              "      <td>man</td>\n",
+              "      <td>0.166667</td>\n",
+              "      <td>1.845827</td>\n",
+              "      <td>0.631579</td>\n",
+              "      <td>0.387054</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>man.n.01-man.n.03</td>\n",
+              "      <td>person.n.01</td>\n",
+              "      <td>man</td>\n",
+              "      <td>man</td>\n",
+              "      <td>0.250000</td>\n",
+              "      <td>2.251292</td>\n",
+              "      <td>0.705882</td>\n",
+              "      <td>0.356225</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>man.n.01-homo.n.02</td>\n",
+              "      <td>organism.n.01</td>\n",
+              "      <td>man</td>\n",
+              "      <td>man</td>\n",
+              "      <td>0.083333</td>\n",
+              "      <td>1.152680</td>\n",
+              "      <td>0.521739</td>\n",
+              "      <td>0.365775</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>man.n.01-man.n.05</td>\n",
+              "      <td>person.n.01</td>\n",
+              "      <td>man</td>\n",
+              "      <td>man</td>\n",
+              "      <td>0.142857</td>\n",
+              "      <td>1.691676</td>\n",
+              "      <td>0.600000</td>\n",
+              "      <td>0.356225</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>man.n.01-man.n.06</td>\n",
+              "      <td>male.n.02</td>\n",
+              "      <td>man</td>\n",
+              "      <td>man</td>\n",
+              "      <td>0.333333</td>\n",
+              "      <td>2.538974</td>\n",
+              "      <td>0.666667</td>\n",
+              "      <td>0.813972</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                Combination            LCS WordA WordB  PATH_SIMIL  LCH_SIMIL  \\\n",
+              "0  man.n.01-serviceman.n.01    person.n.01   man   man    0.166667   1.845827   \n",
+              "1         man.n.01-man.n.03    person.n.01   man   man    0.250000   2.251292   \n",
+              "2        man.n.01-homo.n.02  organism.n.01   man   man    0.083333   1.152680   \n",
+              "3         man.n.01-man.n.05    person.n.01   man   man    0.142857   1.691676   \n",
+              "4         man.n.01-man.n.06      male.n.02   man   man    0.333333   2.538974   \n",
+              "\n",
+              "   WUP_SIMIL  LIN_SIMIL  \n",
+              "0   0.631579   0.387054  \n",
+              "1   0.705882   0.356225  \n",
+              "2   0.521739   0.365775  \n",
+              "3   0.600000   0.356225  \n",
+              "4   0.666667   0.813972  "
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "final_df.head()"
       ]
     },
     {
